--- a/Divine Dine/src/scss/base/_globales.scss
+++ b/Divine Dine/src/scss/base/_globales.scss
@@ -1,5 +1,4 @@
 html {
-    font-size: 62.5%;
     box-sizing: border-box;
 }
 *, *:before, *:after {
@@ -8,16 +7,16 @@ html {
     margin: 0;
 }
 body {
-    font-size: 1.6rem;
+    font-size: 16px;
     line-height: 1.8;
 }
 p {
     color: $black;
-    font-size: 2rem;
+    font-size: 20px;
 }
 .container {
     width: 95%;
-    max-width: 120rem;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
